hover effect on nav bar added

--- a/index.html
+++ b/index.html
@@ -27,10 +27,13 @@
             </div>
             <div class="">
                 <ul class="flex">
-                    <li class="mr-14 font-bold"><a href="#" class="hover:text-purple-700">Home</a></li>
-                    <li class="mr-14 font-bold"><a href=" #" class="hover:text-purple-700">Product</a></li>
-                    <li class="mr-14 font-bold"><a href=" #" class="hover:text-purple-700">Contact Us</a></li>
-                    <li class="mr-14 font-bold"><a href=" #" class="hover:text-purple-700">About Us</a></li>
+                    <li class="mr-14 font-bold"><a href="#" class="hover:text-purple-700 hover:underline">Home</a></li>
+                    <li class="mr-14 font-bold"><a href=" #" class="hover:text-purple-700 hover:underline">Product</a>
+                    </li>
+                    <li class="mr-14 font-bold"><a href=" #" class="hover:text-purple-700 hover:underline">Contact
+                            Us</a></li>
+                    <li class="mr-14 font-bold"><a href=" #" class="hover:text-purple-700 hover:underline">About Us</a>
+                    </li>
                 </ul>
             </div>
         </nav>
