--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon"
+        href="https://image.shutterstock.com/image-vector/fog-logo-template-f-o-260nw-1562310706.jpg"
+        type="image/x-icon">
     <title>Penguin Fashion</title>
 
     <!-- Google Fonts Tag -->
